# terminal-typing-tutor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
terminal_typing_tutor/: constants.py  tutor.py  words.py
terminal_typing_tutor/series/E/: menu.json  title
terminal_typing_tutor/series/E/1/: data.yaml
terminal_typing_tutor/series/E/2/: data.yaml
terminal_typing_tutor/series/E/3/: data.yaml
terminal_typing_tutor/series/E/4/: data.yaml
terminal_typing_tutor/series/E/5/: data.yaml
terminal_typing_tutor/series/E/6/: data.yaml
terminal_typing_tutor/series/E/7/: data.yaml
terminal_typing_tutor/series/E/8/: data.yaml
terminal_typing_tutor/series/F/: menu.json  title
terminal_typing_tutor/series/F/1/: data.yaml
terminal_typing_tutor/series/F/2/: data.yaml
terminal_typing_tutor/series/F/3/: data.yaml
terminal_typing_tutor/series/F/4/: data.yaml
terminal_typing_tutor/series/L/: menu.json  title
terminal_typing_tutor/series/L/1/: data.yaml
terminal_typing_tutor/series/L/2/: data.yaml
terminal_typing_tutor/series/L/3/: data.yaml
terminal_typing_tutor/series/L/4/: data.yaml
