[tool.poetry]
name = "terminal-typing-tutor"
version = "0.6.1"
description = "Improve your touch-typing skills in the terminal, based on the GNU Typist program"
authors = ["Justin Angeles <justinaawd@gmail.com>"]
maintainers = ["Jeremy Pouillot <pouillotjeremy@gmail.com>"]
license = "GPL-3.0-only"
homepage = "https://github.com/justinsgithub/terminal-typing-tutor"
repository = "https://github.com/justinsgithub/terminal-typing-tutor"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
blessed = ">=1.20.0,<2.0.0"
pyyaml = ">=6.0,<7.0"
typer = {extras = ["all"], version = ">=0.9.0,<0.10.0"}
wikiquote = ">=0.1.17,<0.2.0"

[tool.poetry.scripts]
ttt = "terminal_typing_tutor.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
